package edu.uees.disenosoftware.factory;

public interface Notificador {
    void enviar(String destino, String mensaje);
}